feat: Add forwarding domains as verification check
